# hecuba

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CNAME  MANIFEST.in  QbeastAPI.thrift  README.md  StorageItf.java  hecuba_debug.sh  out.txt  pyproject.toml  requirements.txt  setup.py  wordcount.py  wordcount_read.py  wordcount_seq.py
.travis/: build-wheels.sh  install_openjdk8.sh
app/: result.py  wordcount2.py  wordcount_numpy.py  wordcount_read.py  wordcount_seq.py  words.py
cassandra4slurm/: README.md  VERSION.txt  app_node.sh  cass_node.sh  clean-logs.sh  enqueue_cass_node.sh  execute.sh  extractor.sh  install.sh  job-app.sh  job.sh  killer.sh  launcher.sh  pycompss_template.sh  recover.sh  snapshot.sh  tmp-set.sh
cassandra4slurm/scripts/: app_node.sh  cass_node.sh  copy_snapshot.sh  execute.sh  hecuba_debug.sh  hecuba_environment.template  initialize_hecuba.sh  job-app.sh  job.sh  killer.sh  launch_arrow_helper.sh  launch_kafka.sh  launcher.sh  pycompss_template.sh  recover.sh  run_singularity.sh  snapshot.sh  tmp-set.sh
cassandra4slurm/storage_home/: README.md  storage_init.sh  storage_opts.txt  storage_stop.sh
compss_integration_tests/: integration_test_with_compss.py
compss_integration_tests/scripts/: cassandra_is_up.py
conf/: hecuba_params.py  imports.py
confs/conf_13/: data.txt
confs/conf_14/: storage_params.txt
confs/conf_512/: data.txt
confs/conf_58/: data.txt
confs/conf_912/: data.txt
confs/conf_917/: data.txt
dockerfiles/hecuba/: Dockerfile  (+1 more)
examples/: README.md
hecuba/: .IStorage.py.swp  .hdict.py.swp  .storageobj.py.swo  .storageobj.py.swp  IStorage.py  Plist.py  __init__.py  atomicinteger.py  cache.py  crashtest.py  datastore.py  dict.py  globalinit.py  globals.py  hdict.py  hnumpy.py  iter.py  list.py  prefetchmanager.py  qbeast.py  qbeastiface.py  qbeastworker.py  settings.py  storageobj.py  storageobjix.py
hecuba_container/: Dockerfile  Makefile  README.md  runhecubaapp-docker
hecuba_core/: CMakeLists.txt  README.md  TupleRowCache.h
hecuba_core/dependencies/: tbb2017_20161128oss_src.tgz
hecuba_core/src/: ArrayDataStore.cpp  ArrayDataStore.h  Bucket.h  CacheTable.cpp  CacheTable.h  ClusterConfig.cpp  ClusterConfig.h  ConcurrentWriterQueue.h  HecubaExtrae.h  KVCache.h  LRUPersistentStrategy.h  MetaManager.cpp  MetaManager.h  ModuleException.cpp  ModuleException.h  Prefetch.cpp  Prefetch.h  Semaphore.cpp  Semaphore.h  SpaceFillingCurve.cpp  SpaceFillingCurve.h  StorageDict.h  StorageInterface.cpp  StorageInterface.h  TableMetadata.cpp  TableMetadata.h  ThreadPoolReader.cpp  ThreadPoolReader.h  TimestampGenerator.cpp  TimestampGenerator.h  TupleRow.cpp  TupleRow.h  TupleRowCache.h  TupleRowFactory.cpp  TupleRowFactory.h  UUID.cpp  UUID.h  Writer.cpp  Writer.h  WriterThread.cpp  (+3 more)
hecuba_core/src/api/: AttributeClass.h  DataModel.cpp  DataModel.h  HecubaSession.cpp  HecubaSession.h  Hecuba_StorageObject.h  IStorage.cpp  IStorage.h  KeyClass.h  ObjSpec.cpp  ObjSpec.h  README.md  SORecursiveMagic.h  SO_Attribute.h  SO_ClassName.cpp  SO_ClassName.h  StorageDict.h  StorageNumpy.h  StorageObject.cpp  StorageObject.h  StorageStream.h  ValueClass.h
hecuba_core/src/arrow_helper/: server.cpp
hecuba_core/src/cass_mgr/: cass_mgr.cpp  cass_mgr.h  cassandryn.c  cassandryn.h
hecuba_core/src/py_interface/: HCache.cpp  HCache.h  NumpyStorage.cpp  NumpyStorage.h  PythonParser.cpp  PythonParser.h  UnitParser.cpp  UnitParser.h
hecuba_core/tests/: apitest.cpp  apitest_assign_sn_to_dict.cpp  apitest_complex.cpp  apitest_complex_stream.cpp  apitest_multiValue.cpp  apitest_multiattr_write_to_cass.cpp  apitest_old.cpp  apitest_storageobj.cpp  apitest_string.cpp  cache_tests.cpp  cpp_iface_tests.cpp  dictAndObj.yaml  enrictests_intelcassandra.cpp  enrictests_stdcassandra.cpp  meta_manager_tests.cpp  meta_manager_tests_laia.cpp  model_class.py  model_class.yaml  model_complex.yaml  model_complex_stream.yaml  model_multiValue.yaml  model_multiattr.yaml  model_storageobj.yaml  model_string.yaml  pytests.cpp  runtests.cpp  test_meta_manager_inprogress.cpp  test_templates.cpp
hecuba_core/tests/py_interface/: storageobj_tests.py
hecuba_test/: cluster.conf
hfetch/: ArrayPartitioner.cpp  ArrayPartitioner.h  Bucket.h  CMakeLists.txt  Cache.cpp  Cache.h  CacheTable.cpp  CacheTable.h  ClusterConfig.cpp  ClusterConfig.h  HCache.cpp  HCache.h  LICENSE.txt  LRUPersistentStrategy.h  ModuleException.cpp  ModuleException.h  NumpyStorage.cpp  NumpyStorage.h  Prefetch.cpp  Prefetch.h  PythonParser.cpp  PythonParser.h  SpaceFillingCurve.cpp  SpaceFillingCurve.h  StorageDict.h  StorageInterface.cpp  StorageInterface.h  TableMetadata.cpp  TableMetadata.h  TupleRow.cpp  TupleRow.h  TupleRowCache.h  TupleRowFactory.cpp  TupleRowFactory.h  UnitParser.cpp  UnitParser.h  Writer.cpp  Writer.h  metadata.h
hfetch/cmake/: FindTBB.cmake
hfetch/tests/: cpp_iface.cpp  cpp_iface_tests.cpp  pytests.cpp  runtests.cpp
hfetch/tests/python/: CacheTest.py  CgetTest.py  brute.py  do.py  hfetch_tests.py  iterators.py  multidim_arrays.py  npy_test.py  numpy_arr.py  numpy_arr_get.py  numpy_arr_put.py  numpy_arr_put_get.py  numpy_arr_validate.py  numpy_tests.py  put_get_simple.py  put_npy.py  small_brute.py  test.py  test.sh  tryKeyError.py  uuid_do.py  words.py  write_test.py
manylinux_container/: Dockerfile  Makefile  README.md  build-wheels.sh
prefetcher/: .CMakeLists.txt.kate-swp  CMakeLists.txt  CacheTable.cpp  CacheTable.h  HCache.cpp  HCache.h  ModuleException.h  Prefetch.cpp  Prefetch.h  TupleRow.cpp  TupleRow.h  TupleRowFactory.cpp  TupleRowFactory.h  Writer.cpp  Writer.h  setup.py
prefetcher/tests/: CMakeLists.txt  runtests.cpp
prefetcher/tests/python/: CgetTest.py  a.out  do.py  test.py  words.py
pycompss_api/: api.py
storage/: __init__.py  api.py  storage_iface.py
storageItf/: pom.xml
storageLtf/: pom.xml
tests/: BlockValuesIter_tests.py  Block_tests.py  IStorage_tests.py  block_tests.py  class_definitions.py  delete_tests.py  globalinit_tests.py  keyiter_tests.py  persistentdict_tests.py  storagedict_tests.py  storageobj_tests.py
(+212 files in other folders)
